--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   flutter_svg: ^0.22.0
+  dropdown_search: ^5.0.6
 
 dev_dependencies:
   flutter_test:
