--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^0.22.0
   dropdown_search: ^5.0.6
+  http: ^0.13.5
+  flutter_secure_storage: ^8.0.0
+  shared_preferences: ^2.1.0
 
 dev_dependencies:
   flutter_test:
