--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   http: ^0.13.5
   flutter_secure_storage: ^8.0.0
   shared_preferences: ^2.1.0
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
